--- a/WebGUI/html/widgets/siren_alarm.html
+++ b/WebGUI/html/widgets/siren_alarm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Text</title>
+		<title>Siren Alarm</title>
 		<style type="text/css">	
 			body {
 				font: 10px arial;
