--- a/WebGUI/html/widgets/table.html
+++ b/WebGUI/html/widgets/table.html
@@ -3,7 +3,7 @@
 <html>
   	<head>
     	<meta http-equiv="content-type" content="text/html;charset=utf-8">
-    	<title>Plotly chart</title>
+    	<title>Table</title>
 
 		<style>
 
