optimized files tree view in SlowControlsDashboardFileTree.html. Added horizontal grid lines in the SlowControlsDashboard.html

--- a/WebGUI/html/SlowControlsDashboard.html
+++ b/WebGUI/html/SlowControlsDashboard.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
@@ -2335,8 +2336,8 @@
 			{
 				if(on)
 				{
-					mainBlock_.el.style["background-image"] = "linear-gradient(to right, " + gridColor_ + " 1px, transparent 1px), linear-gradient(" + gridColor_ + " 1px, transparent 1px)";//, linear-gradient(to right, rgba(128, 128, 128, 0.5) 10px, transparent 10px)";//, linear-gradient(rgba(128, 128, 128, 0.5) 10px, transparent 10px)";
-					mainBlock_.el.style["background-size"]  =  "10px";
+					mainBlock_.el.style["background-image"] = "linear-gradient(to right, " + gridColor_ + " 1px, transparent 1px), linear-gradient(" + gridColor_ + " 1px, transparent 1px)";
+					mainBlock_.el.style["background-size"]  =  "10px 10px";
 				}
 				else
 				{
