--- a/WebGUI/html/SlowControlsDashboardFileTree.html
+++ b/WebGUI/html/SlowControlsDashboardFileTree.html
@@ -1,197 +1,199 @@
+
+
+
+
+
 <!DOCTYPE HTML>
 <html lang="en"> 
 	<head>
 		<title>File Tree</title>
-		<style type="text/css">			
-			body {
-				background-color: rgba(250,250,250,0.8);
-			}
-			button {
-				background-color: #52a8e8;
-				background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #52a8e8), color-stop(100%, #377ad0));
-				background-image: -webkit-linear-gradient(top, #52a8e8, #377ad0);
-				background-image: -moz-linear-gradient(top, #52a8e8, #377ad0);
-				background-image: -ms-linear-gradient(top, #52a8e8, #377ad0);
-				background-image: -o-linear-gradient(top, #52a8e8, #377ad0);
-				background-image: linear-gradient(top, #52a8e8, #377ad0);
-				border-top: 1px solid #4081af;
-				border-right: 1px solid #2e69a3;
-				border-bottom: 1px solid #20559a;
-				border-left: 1px solid #2e69a3;
-				border-radius: 16px;
-				-webkit-box-shadow: inset 0 1px 0 0 #72b9eb, 0 1px 2px 0 #b3b3b3;
-				box-shadow: inset 0 1px 0 0 #72b9eb, 0 1px 2px 0 #b3b3b3;
-				color: #fff;
-				font: normal 11px/1 "lucida grande", sans-serif;
-				padding: 3px 5px;
-				text-align: center;
-				text-shadow: 0 -1px 1px #3275bc;
-				width: 100%;
-				-webkit-background-clip: padding-box;
-			}
 
-			//}
-			button:hover {
-			  background: #2a81d7;
-			  background: -moz-linear-gradient(0% 100% 90deg, #206bcb, #3e9ee5);
-			  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#3e9ee5), to(#206bcb));
-			  border-top: 1px solid #2a73a6;
-			  border-right: 1px solid #165899;
-			  border-bottom: 1px solid #07428f;
-			  border-left: 1px solid #165899;
-			  -moz-box-shadow: inset 0 1px 0 0 #62b1e9;
-			  -webkit-box-shadow: inset 0 1px 0 0 #62b1e9;
-			  cursor: pointer;
-			  text-shadow: 0 -1px 1px #1d62ab;
-			}
-			
-			button:active {
-			  background: #3282d3;
-			  border: 1px solid #154c8c;
-			  border-bottom: 1px solid #0e408e;
-			  -moz-box-shadow: inset 0 0 6px 3px #1657b5, 0 1px 0 0 #fff;
-			  -webkit-box-shadow: inset 0 0 6px 3px #1657b5, 0 1px 0 0 #fff;
-			  text-shadow: 0 -1px 1px #2361a4;
-			}
-			
-			button[disabled],
-			button[disabled]:hover,
-			button[disabled]:active {
-			  background: #999;
-			  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#dadada), to(#f3f3f3));
-			  border-top: 1px solid #c5c5c5;
-			  border-right: 1px solid #cecece;
-			  border-bottom: 1px solid #d9d9d9;
-			  border-left: 1px solid #cecece;
-			  color: #8f8f8f;
-			  box-shadow: none;
-			  -moz-box-shadow: none;
-			  -webkit-box-shadow: none;
-			  cursor: not-allowed;
-			  text-shadow: 0 -1px 1px #ebebeb;
-			}
-			
-			#header {
-				position: relative;
+		<link rel="stylesheet" type="text/css" href="/WebPath/css/SlowControlsDashboardFileTree.css">
 
-			}
-			.fileTreeTitle{
-				background-color: transparent;
-				text-decoration: none;
-				color: black;
-			}
-			
-			.fileTreeTitle: active {
-				background-color: red;
-			}
-			
-			h2 { 
-				margin: 0px;
-				padding: 0px;
-			}
+		<style type="text/css">
+
+		body {
+			background-color: rgba(250,250,250,0.8);
+		}
+
+		button {
+			background-color: #52a8e8;
+			background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #52a8e8), color-stop(100%, #377ad0));
+			background-image: -webkit-linear-gradient(top, #52a8e8, #377ad0);
+			background-image: -moz-linear-gradient(top, #52a8e8, #377ad0);
+			background-image: -ms-linear-gradient(top, #52a8e8, #377ad0);
+			background-image: -o-linear-gradient(top, #52a8e8, #377ad0);
+			background-image: linear-gradient(top, #52a8e8, #377ad0);
+			border-top: 1px solid #4081af;
+			border-right: 1px solid #2e69a3;
+			border-bottom: 1px solid #20559a;
+			border-left: 1px solid #2e69a3;
+			border-radius: 16px;
+			-webkit-box-shadow: inset 0 1px 0 0 #72b9eb, 0 1px 2px 0 #b3b3b3;
+			box-shadow: inset 0 1px 0 0 #72b9eb, 0 1px 2px 0 #b3b3b3;
+			color: #fff;
+			font: normal 11px/1 "lucida grande", sans-serif;
+			padding: 3px 5px;
+			text-align: center;
+			text-shadow: 0 -1px 1px #3275bc;
+			width: 100%;
+			-webkit-background-clip: padding-box;
+		}
+
+		button:hover {
+			background: #2a81d7;
+			background: -moz-linear-gradient(0% 100% 90deg, #206bcb, #3e9ee5);
+			background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#3e9ee5), to(#206bcb));
+			border-top: 1px solid #2a73a6;
+			border-right: 1px solid #165899;
+			border-bottom: 1px solid #07428f;
+			border-left: 1px solid #165899;
+			-moz-box-shadow: inset 0 1px 0 0 #62b1e9;
+			-webkit-box-shadow: inset 0 1px 0 0 #62b1e9;
+			cursor: pointer;
+			text-shadow: 0 -1px 1px #1d62ab;
+		}
+
+		button:active {
+			background: #3282d3;
+			border: 1px solid #154c8c;
+			border-bottom: 1px solid #0e408e;
+			-moz-box-shadow: inset 0 0 6px 3px #1657b5, 0 1px 0 0 #fff;
+			-webkit-box-shadow: inset 0 0 6px 3px #1657b5, 0 1px 0 0 #fff;
+			text-shadow: 0 -1px 1px #2361a4;
+		}
+
+		button[disabled],
+		button[disabled]:hover,
+		button[disabled]:active {
+			background: #999;
+			background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#dadada), to(#f3f3f3));
+			border-top: 1px solid #c5c5c5;
+			border-right: 1px solid #cecece;
+			border-bottom: 1px solid #d9d9d9;
+			border-left: 1px solid #cecece;
+			color: #8f8f8f;
+			box-shadow: none;
+			-moz-box-shadow: none;
+			-webkit-box-shadow: none;
+			cursor: not-allowed;
+			text-shadow: 0 -1px 1px #ebebeb;
+		}
+
+		#header {
+			position: relative;
+		}
+
+		.fileTreeTitle{
+			background-color: transparent;
+			text-decoration: none;
+			color: black;
+		}
+
+		.fileTreeTitle:active {
+		    background-color: red;
+		}
+
+		h2 {
+			margin: 0px;
+			padding: 0px;
+		}
+
+		a {
+			color: blue;
+		}
 		
-			a {
-				color: blue;
-			}
-			
-			div {
-				position: relative;
-			}
-			
-			
-			#fileBlock {
-				background-color: rgb(26,148,49);
-			}				
+		div {
+			position: relative;
+		}
 
-			#mainBlock {
-				background-color: rgb(240,234,214);
-			}
+		#fileBlock {
+			background-color: rgb(26,148,49);
+		}				
 
-			#fileTreeDiv {
-				height: auto;
-			}
-			
-			.mainBlock {
-				position:absolute;
-			}
-			#saveul {
-				margin: 0px;
-				padding: 0px;
-			}
-			
-			#saveli {
-				margin: 10%;
-			}
-			
-			/* CSS Tree menu styles */
-			ol.tree
-			{
-				padding: 0 0 0 30px;
-				width: inherit;//300px;
+		#mainBlock {
+			background-color: rgb(240,234,214);
+		}
 
-			}
-			li 
-			{ 
-				position: relative; 
-				margin-left: -15px;
-				list-style: none;
-			}
-			li.file
-			{
-				margin-left: -1px !important;
-			}
-				li.file a {
-					background: url(/WebPath/images/windowContentImages/SlowControlsDashboardFileTree-document.png) 0 0 no-repeat;
-					color: #000000;
-					padding-left: 21px;
-					//color: brgb(255, 204, 0);
-					text-decoration: none;
-					font: none "Helvetica Neue"
-					display: block;
-				}
-				li.file a:hover {
-					color: rgba(0,0,0,0.7);
-				}
-				li.file a[href *= '.page']	{ background: url(/WebPath/images/windowContentImages/SlowControlsDashboardFileTree-document.png) 0 0 no-repeat; }
+		#fileTreeDiv {
+			height: auto;
+		}
 
-			li input
-			{
-				position: absolute;
-				left: 0;
-				margin-left: 0;
-				opacity: 0;
-				z-index: 2;
-				cursor: pointer;
-				height: 1em;
-				width: 1em;
-				top: 0;
-			}
-			li input + ol
-			{
-//				background: url(/WebPath/images/windowContentImages/SlowControlsDashboardFileTree-toggle-small-expand.png) 40px 0 no-repeat;
-//				border-bottom: 2px solid black;
-//				border-top: 2px solid black;
-				margin: -0.938em 0 0 -44px; /* 15px */
-				height: 1em;
-			}
-			li input + ol > li { display: none; margin-left: -14px !important; padding-left: 1px; }
-			li label
-			{
-				background: url(/WebPath/images/windowContentImages/SlowControlsDashboardFileTree-folder-horizontal.png) 15px 1px no-repeat;
-				cursor: pointer;
-				display: block;
-				padding-left: 37px;
-			}
+		.mainBlock {
+			position:absolute;
+		}
+		#saveul {
+			margin: 0px;
+			padding: 0px;
+		}
 
-			li input:checked + ol
-			{
-				//background: url(/WebPath/images/windowContentImages/SlowControlsDashboardFileTree-toggle-small.png) 40px 5px no-repeat;
-				margin: -1.25em 0 0 -44px; /* 20px */
-				padding: 1.563em 0 0 80px;
-				height: auto;
-			}
-				li input:checked + ol > li { display: block; margin: 0 0 0.125em;  /* 2px */}
-				li input:checked + ol > li:last-child { margin: 0 0 0.063em; /* 1px */ }
+		#saveli {
+			margin: 10%;
+		}
+
+		/* CSS Tree menu styles */
+		ol.tree {
+			padding: 0 0 0 30px;
+			width: inherit;
+		}
+
+		li { 
+			position: relative; 
+			margin-left: -15px;
+			list-style: none;
+		}
+
+		li.file {
+			margin-left: -1px !important;
+		}
+		li.file a {
+			background: url(/WebPath/images/windowContentImages/SlowControlsDashboardFileTree-document.png) 0 0 no-repeat;
+			color: #000000;
+			padding-left: 21px;
+			//color: brgb(255, 204, 0);
+			text-decoration: none;
+			font: none "Helvetica Neue"
+			display: block;
+		}
+		li.file a:hover {
+			color: rgba(0,0,0,0.7);
+		}
+		li.file a[href *= '.page']	{ background: url(/WebPath/images/windowContentImages/SlowControlsDashboardFileTree-document.png) 0 0 no-repeat; }
+
+		li input
+		{
+			position: absolute;
+			left: 0;
+			margin-left: 0;
+			opacity: 0;
+			z-index: 2;
+			cursor: pointer;
+			height: 1em;
+			width: 1em;
+			top: 0;
+		}
+		li input + ol
+		{
+			margin: -0.938em 0 0 -44px; /* 15px */
+			height: 1em;
+		}
+		li input + ol > li { display: none; margin-left: -14px !important; padding-left: 1px; }
+		li label
+		{
+			background: url(/WebPath/images/windowContentImages/SlowControlsDashboardFileTree-folder-horizontal.png) 15px 1px no-repeat;
+			cursor: pointer;
+			display: block;
+			padding-left: 37px;
+		}
+
+		li input:checked + ol
+		{
+			margin: -1.25em 0 0 -44px; /* 20px */
+			padding: 1.563em 0 0 80px;
+			height: auto;
+		}
+		li input:checked + ol > li { display: block; margin: 0 0 0.125em;  /* 2px */}
+		li input:checked + ol > li:last-child { margin: 0 0 0.063em; /* 1px */ }
 
 		</style>
 
@@ -273,7 +275,6 @@
 				}
 				else
 				{
-					if (fullPathToPage.search(".bob")!= -1){
 					var exists = false;
 					console.log("file dir() - path: ", folderCounter++, path);
 					if(document.getElementById(parentID) != null)
@@ -281,32 +282,32 @@
 						ol = document.getElementById(parentID+ "-ol");
 						exists = true;
 					}
-
-					if(!exists)
-					{
-						var li = document.createElement("li");
-						li.id = path.substring(0, path.search("/")) + "-li";
-					    var input = document.createElement("input");
-					    input.type = "checkbox";
-					    input.id = path.substring(0, path.search("/"));
-					    var label = document.createElement("label");
-					    label.htmlFor = input.id;
-					    label.innerHTML = input.id
-
-					    ol = document.createElement("ol");
-						ol.id = parentID + "-ol";
-
-					    li.appendChild(label);
-					    li.appendChild(input);
-					    li.appendChild(ol);
-					    parentElement.appendChild(li);
-
-						dir(ol, path.substring(path.search("/") + 1), fullPathToPage);
-					}
-					else
-					{
-						dir(ol, path.substring(path.search("/") + 1), fullPathToPage);
-					}
+					if (fullPathToPage.search(".bob")!= -1){
+						if(!exists)
+						{
+							var li = document.createElement("li");
+							li.id = path.substring(0, path.search("/")) + "-li";
+						    var input = document.createElement("input");
+						    input.type = "checkbox";
+						    input.id = path.substring(0, path.search("/"));
+						    var label = document.createElement("label");
+						    label.htmlFor = input.id;
+						    label.innerHTML = input.id
+	
+						    ol = document.createElement("ol");
+							ol.id = parentID + "-ol";
+	
+						    li.appendChild(label);
+						    li.appendChild(input);
+						    li.appendChild(ol);
+						    parentElement.appendChild(li);
+							
+							dir(ol, path.substring(path.search("/") + 1), fullPathToPage);
+						}
+						else
+						{
+							dir(ol, path.substring(path.search("/") + 1), fullPathToPage);
+						}
 					}
 				}
 			}
