--- a/WebGUI/html/widgets/thermometer.html
+++ b/WebGUI/html/widgets/thermometer.html
@@ -5,7 +5,7 @@
 		<style type="text/css">		
 			body {
 				font: 10px arial;
-				background-color:  rgb(250, 250, 250);
+				background-color:  rgb(255, 255, 255);
 				//margin: 0px !important;
 			}
 
@@ -140,8 +140,8 @@
 					thermometers[pvName].render(
 					containers[pvName],
 					pvValue,
-					(pvValue * 0.5),
-					(pvValue * 1.5)
+					(pv_settings_[pvName].Lower_Warning_Limit),
+					(pv_settings_[pvName].Upper_Warning_Limit)
 				);
 
 				thermometers[pvName]._svg._groups[0][0].parentElement.title = 
