Cleaning up a few slow controls web GUI style issues

--- a/WebGUI/html/SlowControlsDashboardEdit.html
+++ b/WebGUI/html/SlowControlsDashboardEdit.html
@@ -19,6 +19,10 @@
 			h2 {
 				margin: 0px;
 			}
+			
+			input {
+				cursor: pointer;
+			}
 
 			::color {
 				cursor: 
@@ -143,7 +147,9 @@
                 font-family: "Lucida Sans Unicode", "Lucida Grande", Verdana, Arial, Helvetica, sans-serif; letter-spacing:-0.5px; font-size:22px;
                 appearance: none;
                 -webkit-appearance: none;
-                -moz-appearance: none;
+                -moz-appearance: none;                
+                text-shadow: 0 -1px 3px #202020;
+    			font-weight: normal;
         	}
 
 			#widgetSearch {	
