Fixed special character handling in config tree fixed choice dropdown

--- a/WebGUI/html/ConfigurationGUI.html
+++ b/WebGUI/html/ConfigurationGUI.html
@@ -3413,7 +3413,7 @@
 						choices = nodes[i].children[1].children; //xml elements
 						for (var j = 0; j < choices.length; ++j) {
 							if (j) treeViewHandlerStr_ += ",";
-							treeViewHandlerStr_ += choices[j].getAttribute("value");
+							treeViewHandlerStr_ += encodeURIComponent(choices[j].getAttribute("value"));
 						}
 						treeViewHandlerStr_ += "</div>";
 					}
