--- a/WebGUI/html/widgets/siren_alarm.html
+++ b/WebGUI/html/widgets/siren_alarm.html
@@ -94,22 +94,7 @@
 					document.getElementById("alarm-text").innerHTML ="";
 					document.getElementById("alarm-image").src = "./green_siren.png";
 				}
-				document.getElementById("alarm-image").title =
-											pvName
-											+ "\nlast value "
-											+ pvValue
-											+ " "
-											+ pv_settings_[pvName].Units
-											+ " time "
-											+ pvTime
-											+ "\nLower Warning Limit:\t" + Number.parseFloat(pv_settings_[pvName].Lower_Warning_Limit).toExponential(2) + "\n"
-										  	+ "Upper Warning Limit:\t"   + Number.parseFloat(pv_settings_[pvName].Upper_Warning_Limit).toExponential(2) + "\n"
-										  	+ "Lower Alarm Limit:\t\t"   + Number.parseFloat(pv_settings_[pvName].Lower_Alarm_Limit).toExponential(2)   + "\n"
-										  	+ "Upper Alarm Limit:\t\t"   + Number.parseFloat(pv_settings_[pvName].Upper_Alarm_Limit).toExponential(2)   + "\n"
-										  	+ "Lower Control Limit:\t"   + Number.parseFloat(pv_settings_[pvName].Lower_Control_Limit).toExponential(2) + "\n"
-										  	+ "Upper Control Limit:\t"   + Number.parseFloat(pv_settings_[pvName].Upper_Control_Limit).toExponential(2) + "\n"
-										  	+ "Lower Display Limit:\t"   + Number.parseFloat(pv_settings_[pvName].Lower_Display_Limit).toExponential(2) + "\n"
-										  	+ "Upper Display Limit:\t"   + Number.parseFloat(pv_settings_[pvName].Upper_Display_Limit).toExponential(2) + "\n";
+				document.getElementById("alarm-image").title = window.parent.setWidgetToolTip(pvName, pvValue, pvTime, pv_settings_);
 			}
 
 			function drawSirenAlarm()
