Checkpoint in resizing Dashboard edit pane

--- a/WebGUI/html/SlowControlsDashboard.html
+++ b/WebGUI/html/SlowControlsDashboard.html
@@ -1870,7 +1870,8 @@
 			{
 				Debug.log("Toggle Edit Mode");
 
-				mouseoutEditBlock();
+				//mouseoutEditBlock();
+				mouseoverEditBlock();
 				
 				var covers = document.getElementsByClassName("widgetCover");
 			    var resize_covers = document.getElementsByClassName("resizeWidgetCover");
